<package format="2">
  <name>perlin_noise_node</name>
  <version>0.0.1</version>
  <description>
    Example nodes to show how to set up publishers and subscribers while
    using the parameter server and dynamic reconfigure and custom messages.
    Examples for Python and C++.
  </description>
  <author>Thomas Denewiler</author>
  <maintainer email="tdenewiler@gmail.com">Thomas Denewiler</maintainer>
  <license>BSD</license>
  <url>https://github.com/tdenewiler/node_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>perlin_noise_filter</depend>
  <depend>roscpp</depend>
  <depend>filters</depend>
  <depend>std_msgs</depend>
</package>
