<package format="2">
  <name>perlin_noise_node</name>
  <version>0.0.1</version>
  <description>
    Collection of ROS nodes that use the perlin_noise_filter package to add Perlin Noise to the motion
    of user specified joints.
  </description>
  <author>Jake Dexheimer</author>
  <maintainer email="jdexheimer@wisc.edu">Jake Dexheimer</maintainer>
  <license>BSD</license>
  <url>https://github.com/jakedex/perlin_noise_node</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>perlin_noise_filter</depend>
  <depend>roscpp</depend>
  <depend>filters</depend>
  <depend>std_msgs</depend>
  <depend>naoqi_bridge_msgs</depend>
</package>
